# multiplayer-fps

./: .gitignore  Client.md  Server.md  client.txt  render_backup.txt
client/: Cargo.toml
client/assets/models/player/: license.txt  scene.gltf
client/assets/shaders/: map_material.wgsl
client/src/: camera.rs  game_state.rs  input.rs  main.rs  map.rs  messages.rs  network.rs  player.rs  render.rs  ui.rs
server/: Cargo.toml
server/src/: game_state.rs  handlers.rs  main.rs  map.rs  messages.rs  network.rs  player.rs
