[package]
name = "maze_wars_client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.1"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
bincode = "1.3.3"
rand = "0.8"
futures-lite = "1.13.0"
smallvec = "1.10.0"
